# ssl-with-zylia

./: .gitignore  CMakeLists.txt
examples/alsa-basics/: README.md  main.cpp  peak_volume_mono.cpp  peak_volume_zylia.cpp  print_used_alsa_lib.cpp  record_and_play_simultaneously.cpp
examples/poc-saf/: array2sh.cpp
examples/ssl/: array2sh.cpp  peak_volume_monitor.cpp
poc-saf/: CMakeLists.txt  array2sh.cpp
src/ssl/: audio_capture.cpp  audio_capture.h  microphone_config.h  sound_source_localization.cpp  sound_source_localization.h  utils.cpp  utils.h
